Retrieval of game object over REST

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,9 +6,9 @@ block content
 			div.throbber
 				img(src="/images/throbber-large.gif")
 	div.aside
-		div(ui-view="title", ng-animate="'view'")
-		div(ui-view="auth", ng-animate="'view'")
-		div(ui-view="game", ng-animate="'view'")
-		div(ui-view="gamesControls", ng-animate="'view'")
-		div(ui-view="gameControls", ng-animate="'view'")
+		div(ui-view="title")
+		div(ui-view="auth")
+		div(ui-view="game")
+		div(ui-view="gamesControls")
+		div(ui-view="gameControls")
 		
