Games can now be started when the correct number of players have joined

--- a/views/index.jade
+++ b/views/index.jade
@@ -9,6 +9,6 @@ block content
 		div(ui-view="title")
 		div(ui-view="auth")
 		div(ui-view="game")
-		div(ui-view="gamesControls")
-		div(ui-view="gameControls")
+		div(ui-view="gamesControl")
+		div(ui-view="gameControl")
 		
