Users now added to games and game object assigned to board controller

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,7 @@ html(ng-app="MonopolyJs")
 		script(type="text/javascript", src="/js/app/services/games.js")
 		script(type="text/javascript", src="/js/app/controllers/game.js")
 		script(type="text/javascript", src="/js/app/controllers/games.js")
+		script(type="text/javascript", src="/js/app/controllers/board.js")
 	body		
 		div.container
 			block content			
