--- a/views/partials/game.jade
+++ b/views/partials/game.jade
@@ -1,12 +1,10 @@
 div(ng-controller="game")
-	h2(ng-hide="game._id === undefined") {{game.name}}
-	h2(ng-show="game._id === undefined")
+	h2(ng-hide="Game._id === undefined") {{Game.name}}
+	h2(ng-show="Game._id === undefined")
 		em Loading...
-	div.game(ng-hide="game._id === undefined")
-		div(ng-if="!game.started")
-			em Waiting for other players to join
-		div(ng-if="game.started")
-			ul		
-				li(ng-repeat="player in game.players") 
-					img(src="{{player.avatarUrl}}" alt="{{player.name}}")
-					span {{player.friendlyName}}
+	div.game(ng-hide="Game._id === undefined")
+		em(ng-if="!Game.started") Waiting for other players to join
+		ul		
+			li(ng-repeat="player in Game.players") 
+				img(src="{{player.avatarUrl}}" alt="{{player.name}}")
+				span {{player.friendlyName}}
