--- a/views/index.jade
+++ b/views/index.jade
@@ -8,7 +8,7 @@ block content
 	div.aside
 		div(ui-view="title")
 		div(ui-view="auth")
+		div(ui-view="info")
+		div(ui-view="games")
 		div(ui-view="game")
-		div(ui-view="gamesControl")
-		div(ui-view="gameControl")
 		
