--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,9 +7,11 @@ html(ng-app="MonopolyJs")
 		script(type="text/javascript", src="/js/components/angular-ui-router/release/angular-ui-router.min.js")
 		script(type="text/javascript", src="/js/app/app.js")
 		script(type="text/javascript", src="/js/app/services/games.js")
-		script(type="text/javascript", src="/js/app/controllers/game.js")
-		script(type="text/javascript", src="/js/app/controllers/games.js")
+		script(type="text/javascript", src="/js/app/services/users.js")
 		script(type="text/javascript", src="/js/app/controllers/board.js")
+		script(type="text/javascript", src="/js/app/controllers/info.js")
+		script(type="text/javascript", src="/js/app/controllers/games.js")
+		script(type="text/javascript", src="/js/app/controllers/game.js")
 	body		
 		div.container
 			block content			
