--- a/views/partials/games.jade
+++ b/views/partials/games.jade
@@ -1,4 +1,4 @@
-div(class="games_controls", ng-controller="games")
+div(class="games", ng-controller="games")
 	div.list
 		h2 Current games	
 		ul		
