--- a/views/partials/game.jade
+++ b/views/partials/game.jade
@@ -1,10 +1,5 @@
 div(ng-controller="game")
-	h2(ng-hide="Game._id === undefined") {{Game.name}}
-	h2(ng-show="Game._id === undefined")
-		em Loading...
-	div.game(ng-hide="Game._id === undefined")
-		em(ng-if="!Game.started") Waiting for other players to join
-		ul		
-			li(ng-repeat="player in Game.players") 
-				img(src="{{player.avatarUrl}}" alt="{{player.name}}")
-				span {{player.friendlyName}}
+	div.your_go(ng-show="isItMyTurn()")
+		h2 It's your turn!
+	div.opponents_go(ng-show="isItMyTurn() === false")
+		h2 It's {{getCurrentPlayerFriendlyName()}}'s turn
