Converted to camelCase and started dice roll

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,7 @@ html(ng-app="MonopolyJs")
 		script(type="text/javascript", src="/js/app/app.js")
 		script(type="text/javascript", src="/js/app/services/games.js")
 		script(type="text/javascript", src="/js/app/services/users.js")
+		script(type="text/javascript", src="/js/app/services/dice.js")
 		script(type="text/javascript", src="/js/app/controllers/board.js")
 		script(type="text/javascript", src="/js/app/controllers/info.js")
 		script(type="text/javascript", src="/js/app/controllers/games.js")
