--- a/views/partials/info.jade
+++ b/views/partials/info.jade
@@ -8,4 +8,4 @@ div(ng-controller="info")
 			li(ng-repeat="player in Game.players") 
 				img(src="{{player.avatarUrl}}" alt="{{player.name}}")
 				span {{player.friendlyName}}
-				span £{{player.money}}
+				span(ng-show="game.started === true") £{{player.money}}
