--- a/views/partials/game.jade
+++ b/views/partials/game.jade
@@ -1,20 +1,20 @@
 div(ng-controller="game", ng-show="Game.started == true")
 	div(ng-show="isItMyTurn()")
 		h2 It's your turn!
-		form(name="rollDiceForm", ng-submit="rollDice()", ng-show="roll1 === undefined && roll2 === undefined")
-			div.errors(ng-show="errors.length")
+		form(name="rollDiceForm", ng-submit="rollDice()")
+			div.errors(ng-show="errors.rollDice.length")
 				ul
-					li(ng-repeat="error in errors") {{error.msg}}
+					li(ng-repeat="error in errors.rollDice") {{error.msg}}
 			div.submit
-				button.btn(type='rollDice') Roll the dice
-		ul(ng-show="roll1 !== undefined && roll2 !== undefined")
-			li {{roll1}}
-			li {{roll2}}
-		form(name="endTurnForm", ng-submit="endTurn()", ng-hide="roll1 === undefined && roll2 === undefined")
-			div.errors(ng-show="errors.length")
+				button.btn Roll the dice
+		ul
+			li {{getLastTurn().roll1}}
+			li {{getLastTurn().roll2}}
+		form(name="endTurnForm", ng-submit="endTurn()")
+			div.errors(ng-show="errors.endTurn.length")
 				ul
-					li(ng-repeat="error in errors") {{error.msg}}
+					li(ng-repeat="error in errors.endTurn") {{error.msg}}
 			div.submit
-				button.btn(type='endTurn') End turn
+				button.btn End turn
 	div(ng-show="!isItMyTurn()")
 		h2 It's {{getCurrentPlayerFriendlyName()}}'s turn
